--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -1,5 +1,5 @@
 # 搜索当前目录下的所有.cpp文件，已及递归目录下的所有.cpp文件
-file(GLOB_RECURSE API_SRC_FILES "*.cpp")
+file(GLOB_RECURSE API_SRC_FILES "*.cc")
 
 # 编译为动态库
 add_library(aisdk_api SHARED ${API_SRC_FILES})
