--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,5 +1,5 @@
 # 搜索当前目录下的所有.cpp文件，已及递归目录下的所有.cpp文件
-file(GLOB_RECURSE CORE_SRC_FILES "*.cpp")
+file(GLOB_RECURSE CORE_SRC_FILES "*.cc")
 
 add_library(aisdk_core SHARED ${CORE_SRC_FILES})
 
