--- a/src/registry/CMakeLists.txt
+++ b/src/registry/CMakeLists.txt
@@ -5,6 +5,6 @@ file(GLOB_RECURSE REGISTRY_SRC_FILES "*.cc")
 
 add_library(aisdk_registry SHARED ${REGISTRY_SRC_FILES})
 
-set(OPENCV_LIBRARIES "opencv_core;opencv_imgcodecs;opencv_imgproc;")
+set(OPENCV_LIBRARIES "opencv_core;opencv_imgcodecs;opencv_imgproc;opencv_dnn")
 target_link_libraries(aisdk_registry PUBLIC aisdk_common ${OPENCV_LIBRARIES} ${REGISTRY_LIBRARIES})
 install(TARGETS aisdk_registry DESTINATION lib)
